--- a/_data/2023/papers.yaml
+++ b/_data/2023/papers.yaml
@@ -110,3 +110,11 @@ Week 3 -- Deep Time:
     PDF: "Meredith2009.pdf"
     description: "Similarly, this paper (which we referenced heavily in lecture) combines genetics and paleontology to highlight the loss of tooth enamel in mammals such as whales and sloths. You will perform a simplified but similar version of this analysis in your homework."
 
+
+Week 5 -- What is Life:
+  - title: "Biology, Molecular and Organismic"
+    author: "Theodosius Dobzhansky."
+    journal: Am. Zool.
+    year: 1964
+    PDF: "Dobzhansky1964.pdf"
+    description: "This classic paper is one of two in which Dobzhansky made the now-famous claim that 'nothing in biology makes sense except in the light of evolution'."
