--- a/_data/2024/members.yaml
+++ b/_data/2024/members.yaml
@@ -98,7 +98,7 @@
   email: psatya
   year: Senior
   major: Bioengineering
-  image: placeholder.jpg
+  image: psatya.jpg
   role: TA
   pronouns: he/him
 
@@ -170,6 +170,6 @@
   email: ssahoo
   year: Sophomore
   major: Computer Science
-  image: placeholder.jpg
+  image: ssahoo.png
   role: TA
   pronouns: he/him
