--- a/_data/2024/papers.yaml
+++ b/_data/2024/papers.yaml
@@ -19,3 +19,10 @@ Week 1:
     year: 2006
     link: "https://www.dropbox.com/scl/fi/fskojtadxwqwa1ophwxpr/shaffer2006.pdf?rlkey=pphbrs6lbdpi0q4irj24ulnl8&dl=0"
     description: "..."
+
+  - title: "Duration of urination does not change with body size"
+    author: "Patricia Yang, Jonathan Pham, Jerome Choo, and David Hu."
+    journal: "PNAS"
+    year: 2014
+    link: "https://www.dropbox.com/scl/fi/4gcnsq07wjaeie8bhkw68/yang2014.pdf?rlkey=m7znwvfb06cxodp12a9e0hyo8&dl=0"
+    description: "..."
