--- a/_data/2024/members.yaml
+++ b/_data/2024/members.yaml
@@ -114,7 +114,7 @@
   email: sdara
   year: Senior
   major: Bioengineering
-  image: placeholder.jpg
+  image: sdara.png
   role: TA
   pronouns: she/her
 
