post enamel paper

--- a/_data/2024/papers.yaml
+++ b/_data/2024/papers.yaml
@@ -26,3 +26,14 @@ Week 1:
     year: 2014
     link: "https://www.dropbox.com/scl/fi/4gcnsq07wjaeie8bhkw68/yang2014.pdf?rlkey=m7znwvfb06cxodp12a9e0hyo8&dl=0"
     description: "..."
+
+Week 4:
+  - title: "Molecular Decay of the Tooth Gene Enamelin (ENAM) Mirrors the Loss of Enamel in the Fossil Record of Placental Mammals"
+    author: "Robert Meredith, John Gatesy, William Murphy, Oliver Ryder, and Mark Springer."
+    journal: "PLoS Genetics"
+    year: 2009
+    link: "https://www.dropbox.com/scl/fi/vggv9ab30r2rgn8jf4ok1/meredith2009.pdf?rlkey=7pvf3iftns1f557k7sye7wa9k&st=x12ibuo7&dl=0"
+    description: "..."
+
+
+
