--- a/_data/2024/papers.yaml
+++ b/_data/2024/papers.yaml
@@ -35,5 +35,17 @@ Week 4:
     link: "https://www.dropbox.com/scl/fi/vggv9ab30r2rgn8jf4ok1/meredith2009.pdf?rlkey=7pvf3iftns1f557k7sye7wa9k&st=x12ibuo7&dl=0"
     description: "..."
 
+Week 7: 
+  - title: "A First Exposure to Statistical Mechanics for Life Scientists" 
+    author: "Hernan G. Garcia, Jané Kondev, Nigel Orme, Julie A. Theriot, and Rob Phillips." 
+    journal: "*Rejected* by American Journal of Physics"
+    year: 2007.
+    link: "http://rpdata.caltech.edu/publications/Garcia2007b.pdf"
+    description: "An article elucidating key features of the formidably general statistical mechanical protocol."
 
-
+Week 9:
+  - title: "All I Really Need to Know about Physics I had to Dig Up by Myself"
+    author: "David Stern"
+    journal: "Physics Today"
+    year: 1993
+    link: "http://theory.caltech.edu/~preskill/all-i-really-need-to-know.pdf"
