--- a/_data/2024/papers.yaml
+++ b/_data/2024/papers.yaml
@@ -49,3 +49,22 @@ Week 9:
     journal: "Physics Today"
     year: 1993
     link: "http://theory.caltech.edu/~preskill/all-i-really-need-to-know.pdf"
+
+  - title: "Four Golden Lessons"
+    author: "Steven Weinberg"
+    journal: "Nature"
+    year: "2003"
+    link: "https://www.nature.com/articles/426389a.pdf"
+
+  - title: "Biology must generate ideas as well as data"
+    author: "Paul Nurse"
+    journal: "Nature"
+    year: 2021
+    link: "https://doi.org/10.1038/d41586-021-02480-z"
+
+  - title: "Life’s code script"
+    author: "Sydney Brenner"
+    journal: "Nature"
+    year: 2012
+    link: "https://www.nature.com/articles/482461a"
+
