--- a/_data/2025/members.yaml
+++ b/_data/2025/members.yaml
@@ -130,9 +130,9 @@
   email: zyang4
   year: Sophomore
   major: Physics
-  image: placeholder.jpg
+  image: ayang.png
   role: TA
-  pronouns: 
+  pronouns: he/him
 
 - name: Bisrat Kassahun
   email: bkassahu
